refactor(security): implement stateless JWT authentication and fix 401 issue